# sdf-wot-converter

./: .gitignore  Cargo.toml  LICENSE  README  README.md
.github/workflows/: rust.yml  test.yml
examples/: example.rs
examples/sdf/: example.sdf.json  sdfobject-level.sdf.json
examples/wot/: example.td.json  example.tm.json
sdf-wot-converter/: Cargo.toml
sdf-wot-converter-cli/: Cargo.toml
sdf-wot-converter-cli/src/: main.rs
sdf-wot-converter-wasm/: Cargo.toml  README.md
sdf-wot-converter-wasm/src/: lib.rs
sdf-wot-converter/src/: converter.rs  lib.rs  model.rs
sdf-wot-converter/src/converter/: mod.rs  sdf_to_wot.rs
sdf-wot-converter/src/sdf/: definitions.rs
sdf-wot-converter/src/wot/: definitions.rs  mod.rs  tm_from_sdf.rs
src/: converter.rs  lib.rs  main.rs  model.rs
src/converter/: sdf_to_wot.rs
src/converters/: mod.rs  sdf_to_tm.rs
src/sdf/: definitions.rs  mod.rs  sdf_from_tm.rs
src/wot/: converter.rs  definitions.rs  mod.rs  tm_from_sdf.rs
tests/: converter.rs
