[package]
name = "sdf-wot-converter"
description = "Converter between WoT TD and SDF (including protocol bindings). Work in Progress."
version = "0.1.0"
authors = ["Jan Romann <jan.romann@uni-bremen.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/JKRhb/sdf-wot-converter"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = {version = "0.4.19", features = ["serde"]}
assert-json-diff = "2.0.1"
ciborium = "0.2.0"
regex = "1.5.4"
url = "2.2.2"
clap = {version = "3.0.14", features = ["cargo"]}
reqwest = {version = "0.11.10", features = ["blocking"]}
serde_variant = "0.1.1"

[dependencies.serde_with]
version = "1.12.1"
