[package]
name = "sdf-wot-converter-wasm"
version = "0.1.0"
authors = ["Jan Romann <jan.romann@uni-bremen.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/JKRhb/sdf-wot-converter"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
sdf-wot-converter = { path = "../sdf-wot-converter" }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.63"

console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
